<resources>
    <string name="app_name">AnyChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="email_or_username">Email or Username</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="anychat">AnyChat</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password_reset">Password Reset</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="log_in_now">Log in now</string>
    <string name="i_agree_to_terms_and_conditions">I Agree to terms and conditions</string>
    <string name="no_name">No Name</string>
    <string name="no_description">No Description</string>
    <string name="no_information_about_birth_date">No information about birth date</string>
    <string name="save">Save</string>
    <string name="goChat">Open Chat</string>
    <string name="your_first_name">Your first name</string>
    <string name="your_second_name">Your second name</string>
    <string name="your_birth_date">Your birth date</string>
    <string name="about_you">About You</string>
    <string name="allowed_username">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="allowed_email">ABCDEFGHIJKLMNOPQRSTUVWXYZ@.-abcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="allowed_password">ABCDEFGHIJKLMNOPQRSTUVWXYZ@.-#$%abcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="must_agree_terms">You must agree terms!</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="take_a_picture">Take a picture</string>
</resources>